--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -1,8 +1,8 @@
 = simple_form_for @event do |f|
   == f.input :title
-  == f.association :user
-  == f.input :begins, label: 'Start Time (date ignored)'
-  == f.input :ends, label: 'End Time (date ignored)'
+  == f.association :user, label_method: :email
+  == f.input :begins, as: :time, label: 'Start Time', ampm: true
+  == f.input :ends, as: :time, label: 'End Time', ampm: true
   == f.input :series_ends, label: 'Event stops repeating on'
   == f.input :repeats
   == f.select_recurring :repeat_rule, nil, allow_blank: true
