--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,9 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require 1st_load_framework
  *= require fontawesome
  *= require select2
  *= require recurring_select
- *= require_tree .
  *= require_self
  */
