--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,51 +1,28 @@
 p#notice = notice
-p.lead
-  - if @event.schedule.occurring_at?(Time.zone.now)
-    == 'OCCURRING RIGHT NOW!'
 
-p
-  strong User: 
-  = @event.user.email
-p
-  strong Begins: 
-  = @event.begins
-p
-  strong Ends: 
-  = @event.ends
-p
-  strong Repeat rule: 
-  code = @event.schedule.to_s
-p
-  strong Title: 
-  = @event.title
-p
-  strong Description: 
-  = @event.description
+ul.list-group
+  li.list-group-item.active
+    h5.list-group-item-header == @event.title
+    p.list-group-item-text == @event.description
+  li.list-group-item 
+    h5.list-group-item-header ... occurs at the following times: 
+    p.list-group-item-text #{@event.start_time} until #{@event.end_time}
+  li.list-group-item 
+    h5.list-group-item-header ... occurs next on:
+    p.list-group-item-text #{@event.next_up}
+  li.list-group-item
+    h5.list-group-item-header ... repeats according to the following rule:
+    p.list-group-item-text == @event.schedule.to_s
+  - if @event.schedule.occurring_at?(Time.zone.now)
+    li.list-group-item
+      h5.list-group-item-header Occurring Right Now
+      p.list-group-item-text This event is currently taking place!
+hr
 .row
   .col-md-6
-
-    h2 Upcoming Occurrences
-    table.table
-      - @event.remaining_occurrences.each do |o|
-        tr
-          td == o
-          td 
-            == form_for EventException.new, 
-              url: event_event_exceptions_path(@event), method: :post do |f|
-              == f.hidden_field :skip_time, value: o.to_datetime.to_s
-              == f.submit 'Cancel', class: 'btn btn-link' if @event.schedule.occurring_at?(o)
-  .col-md-6
-    h2 Exceptions
-    table.table
-      tr
-        th Event will not occur on...
-        th Actions
-      - @event.event_exceptions.order(skip_time: :asc).each do |ee|
-        tr
-          td == FormatExceptionDate.new(ee.skip_time).to_s
-          td == link_to "Remove Exception",
-            event_event_exception_path(@event, ee.skip_time), method: :delete
-
+    == render partial: 'upcoming', locals: { event: @event }
+  .col-md-6 
+    == render partial: 'excepts', locals: { event: @event }
 = link_to 'Edit', edit_event_path(@event)
 '|
 = link_to 'Back', events_path
